src/objects/CommunicationPlan__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChangeManagerIsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrequencyInDays__c</fullName>
        <formula>CASE(1, IF(ISPICKVAL( Frequency__c, &quot;Daily&quot; ), 1, 0), 1, 
        IF(ISPICKVAL( Frequency__c, &quot;Weekly&quot; ), 1, 0), 7,
        IF(ISPICKVAL( Frequency__c, &quot;Fortnightly&quot; ), 1, 0), 14,
        IF(ISPICKVAL( Frequency__c, &quot;Monthly&quot; ), 1, 0), 30,
        IF(ISPICKVAL( Frequency__c, &quot;Quarterly&quot; ), 1, 0), 90,
        IF(ISPICKVAL( Frequency__c, &quot;Yearly&quot; ), 1, 0), 365,
        0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GenerateTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How__c</fullName>
        <label>How</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewTaskNeedsToBeCreated__c</fullName>
        <formula>IF(AND(TODAY() &gt;=  NextCreateTaskDate__c,  GenerateTask__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Task Needs To Be Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextCreateTaskDate__c</fullName>
        <formula>IF( ISNULL( TaskLastGenerated__c ), When__c, TaskLastGenerated__c +  FrequencyInDays__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Create Task Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectIsActive__c</fullName>
        <formula>AND(NOT(ISPICKVAL(Project__r.pse__Stage__c,&quot;Closed&quot;)),NOT(ISPICKVAL(Project__r.pse__Stage__c,&quot;Completed&quot;)),NOT(ISPICKVAL(Project__r.pse__Stage__c,&quot;Canceled&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Communication Plans</relationshipLabel>
        <relationshipName>CommunicationPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ResponsiblePTM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Person</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProjectTeamMember__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProjectTeamMember__c</referenceTo>
        <relationshipLabel>Communication Plans (Responsible Person)</relationshipLabel>
        <relationshipName>CommunicationPlansResponsiblePerson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsiblePerson__c</fullName>
        <label>Responsible Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskLastGenerated__c</fullName>
        <label>Task Last Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <type>Date</type>
    </fields>
    <label>Communication Plan</label>
    <nameField>
        <displayFormat>Comm-{00000000}</displayFormat>
        <label>Communication Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>